asfdemux: fix a seek failure due to out-of-range in push mode

A seek in push mode failed for big offsets which are beyond
the range of guint32.

https://bugzilla.gnome.org/show_bug.cgi?id=748162